force-app/main/default/objects/Configuration__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <label>Battery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60 KWh</fullName>
            </value>
            <value>
                <fullName>70 KWh</fullName>
            </value>
            <value>
                <fullName>80 KWh</fullName>
            </value>
            <value>
                <fullName>90 KWh</fullName>
            </value>
            <value>
                <fullName>100 KWh</fullName>
            </value>
            <value>
                <fullName>101 KWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>