force-app/main/default/objects/Configuration__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silk Blue Metallic</fullName>
            </value>
            <value>
                <fullName>Night Blue Metallic</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Tungsten Silver Metallic</fullName>
            </value>
            <value>
                <fullName>Platinum Gray Metallic</fullName>
            </value>
            <value>
                <fullName>Tornado Red</fullName>
            </value>
            <value>
                <fullName>Crimson Metallic Flow</fullName>
            </value>
            <value>
                <fullName>Pure White</fullName>
            </value>
            <value>
                <fullName>California Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>