force-app/main/default/objects/Configuration__c/fields/Demo_Key__c.field-meta.xml
<CustomField>
    <fullName>Demo_Key__c</fullName>
    <label>Demo Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>