force-app/main/default/objects/Configuration__c/fields/motor__c.field-meta.xml
<CustomField>
    <fullName>motor__c</fullName>
    <label>motor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>225 kW (302 PS) - 83kWh</fullName>
            </value>
            <value>
                <fullName>225 kW (302 PS) - 101kWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>